--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "json2xml": "^0.1.3",
     "mongoose": "^5.1.1",
     "morgan": "^1.9.0",
-    "url": "^0.11.0"
+    "url": "^0.11.0",
+    "uuid": "^3.2.1"
   },
   "devDependencies": {
     "run-script-os": "^1.0.3"
