--- a/my_modules/oai-pmh-harvester/package.json
+++ b/my_modules/oai-pmh-harvester/package.json
@@ -6,7 +6,17 @@
   "dependencies": {
     "async": "^2.6.0",
     "debug": "^3.1.0",
-    "oai-pmh": "^1.1.1"
+    "oai-pmh": "^1.1.1",
+        "cookie-parser": "^1.4.3",
+        "express": "^4.16.3",
+        "http-errors": "^1.6.3",
+        "http-status-codes": "^1.3.0",
+        "install": "^0.11.0",
+        "json2xml": "^0.1.3",
+        "mongoose": "^5.1.1",
+        "morgan": "^1.9.0",
+        "url": "^0.11.0",
+        "uuid": "^3.2.1"
   },
   "devDependencies": {
     "run-script-os": "^1.0.3"
