--- a/my_modules/oai-pmh-harvester/package.json
+++ b/my_modules/oai-pmh-harvester/package.json
@@ -24,7 +24,7 @@
   "scripts": {
     "prepare": "cp index.js ./node_modules/oai-pmh/src; cd node_modules/oai-pmh/;npm i",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node demo.js"
+    "start": "node ./bin/www"
   },
   "author": "Miguel Ferreira",
   "license": "MIT"
